<resources>
    <string name="app_name">BulletCricketLive</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Open">open drawer</string>
    <string name="Close">close drawer</string>
    <string name="toolbar_title">Bullet Cricket Live</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_live">Live</string>
    <string name="title_result">Result</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="about_msg1">Bullet Cricket live  is an initiative to bring sports to the digital world and providing the sports fans a live experience. We at BulletCricketLibe.com provides you with the 360 degrees cricket entertainment from live score to each and every latest news updates on your fingertips.</string>
    <string name="about_msg2">It offers a complete package about the whole cricket set up. You can get various cricket match information like the score card, latest cricket updates, latest cricket news and updates of cricket matches also to create a community of like minded people. Our app is available for Android download now enjoy Cricket like never before</string>

    <string name="privacy_msg">Your privacy is important to us. It is Trishasofttech policy to respect your privacy regarding any information we may collect from you through our app, Bullet cricket live .\n\nWe only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we are collecting it and how it will be used.\n\nWe only retain collected information for as long as necessary to provide you with your requested service. What data we store, we will protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.\n\nWe do not share any personally identifying information publicly or with third-parties, except when required to by law.\n\nOur app may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.\n\nYou are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.\n\nYour continued use of our app will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.\n\nThis policy is effective as of 28 August 2020.</string>
</resources>